--- a/packages/location_android/android/build.gradle
+++ b/packages/location_android/android/build.gradle
@@ -25,7 +25,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -41,7 +41,10 @@ android {
     }
 
     defaultConfig {
-        minSdkVersion 21
+          minSdkVersion 21
+        compileSdkVersion 33
+
+        targetSdkVersion 33
     }
 }
 
